Added input fields + material icon support

--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,22 @@
         <header>
             <h1>Logo</h1>
         </header>
+        <article>
+            <div class="username">
+                <i class="material-icons">perm_identity</i>
+                <form action="Username">
+                    Username:<br>
+                    <input type="text" name="username"><br>
+                </form>
+            </div>
+            <div class="password">
+                <i class="material-icons">lock_outline</i>
+                <form action="Password">
+                    Password:<br>
+                    <input type="text" name="password"  style="background-color:transparent"><br>
+                </form>
+            </div>
+        </article>
     </div>
 </body>
 </html>
