First page done

--- a/site/index.html
+++ b/site/index.html
@@ -16,19 +16,19 @@
         <article>
             <div class="username">
                 <i class="material-icons">perm_identity</i>
-                <form action="Username">
-                    Username:<br>
-                    <input type="text" name="username"><br>
-                </form>
+                <input type="text" id="username" placeholder="      Username">
             </div>
             <div class="password">
                 <i class="material-icons">lock_outline</i>
-                <form action="Password">
-                    Password:<br>
-                    <input type="text" name="password"  style="background-color:transparent"><br>
-                </form>
+                <input type="text" id="password" placeholder="      Password">
             </div>
         </article>
+        <section>
+            <button name="login">Sign in</button>
+        </section>
+        <nav>
+            <button name="no account?">Don't have an account</button>
+        </nav>
     </div>
 </body>
 </html>
