Working on implementing JS

--- a/site/index.html
+++ b/site/index.html
@@ -24,11 +24,12 @@
             </div>
         </article>
         <section>
-            <button name="login">Sign in</button>
+            <button name="login" ontoggle="toggleButton()">Sign in</button>
         </section>
         <nav>
             <button name="no account?">Don't have an account</button>
         </nav>
     </div>
+    <script src="js/menu.js"></script>
 </body>
 </html>
