--- a/site/index.html
+++ b/site/index.html
@@ -16,18 +16,18 @@
         <article>
             <div class="username">
                 <i class="material-icons">perm_identity</i>
-                <input type="text" id="username" placeholder="      Username">
+                <input type="text" id="username" placeholder="Username">
             </div>
             <div class="password">
                 <i class="material-icons">lock_outline</i>
-                <input type="text" id="password" placeholder="      Password">
+                <input type="text" id="password" placeholder="Password">
             </div>
         </article>
-        <section>
-            <button name="login" ontoggle="toggleButton()">Sign in</button>
-        </section>
+        <div class="Button">
+            <button name="login" toggle="activateButton()">Sign in</button>
+        </div>
         <nav>
-            <button name="no account?">Don't have an account</button>
+            <button name="no account?">Don't have an account?</button>
         </nav>
     </div>
     <script src="js/menu.js"></script>
