Compatibility with desktop added

--- a/site/index.html
+++ b/site/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro|Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <div class="background-image"></div>
     <div class="container">
         <header>
             <h1>Logo</h1>
@@ -24,7 +26,7 @@
             </div>
         </article>
         <div class="Button">
-            <button name="login" toggle="activateButton()">Sign in</button>
+            <button name="login">Sign in</button>
         </div>
         <nav>
             <button name="no account?">Don't have an account?</button>
