Added a Second Page

--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro|Material+Icons" rel="stylesheet">
-    <title>Document</title>
+    <title>Sign In</title>
 </head>
 <body>
     <div class="background-image"></div>
@@ -26,7 +26,9 @@
             </div>
         </article>
         <div class="Button">
-            <button name="login">Sign in</button>
+            <form action="main.html">
+                <input type="submit" value="Sign In"/>
+            </form>
         </div>
         <nav>
             <button name="no account?">Don't have an account?</button>
