Added js, polished

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,13 +7,13 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro|Material+Icons" rel="stylesheet">
-    <title>Sign In</title>
+    <title>Romanitc Cruises</title>
 </head>
 <body>
+    <div class="container_index">
     <div class="background-image"></div>
-<div class="container_index">
     <header>
-        <h1>Logo</h1>
+        <img src="img/logo.png" alt="logo">
     </header>
     <article>
         <div class="username">
@@ -34,6 +34,6 @@
         <button name="no account?">Don't have an account?</button>
     </nav>
 </div>
-    <script src="js/menu.js"></script>
 </body>
+    <script src="js/menu.js"></script>
 </html>
