--- a/site/public/main.html
+++ b/site/public/main.html
@@ -7,14 +7,21 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro|Material+Icons" rel="stylesheet">
-    <title>Sign In</title>
+    <title>Romanitc Cruises</title>
 </head>
 <body>
-    <div class="container_main">
+    <div class="background-image"></div>
+<div class="container_main">
+    <div class="pic">
+        <img src="img/logo.png" alt="logo">
+    </div>
     <main>
         <a href="index.html">
             <i class="material-icons">navigate_before</i>
         </a>
+        <div class="menu">
+            <i class="material-icons" onclick="toggleMenu()">stars</i>
+        </div>
         <div class="mediterranean">
             <h1>Mediterranean</h1>
         </div>
@@ -34,6 +41,6 @@
         </div>
     </div>
 </div>
-    <script src="js/menu.js"></script>
 </body>
+    <script src="js/menu.js"></script>
 </html>
